--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,10 @@
 log4j.rootLogger = stdout,info,warn,debug,error  
 
 # \u63A7\u5236\u53F0\u8F93\u51FA
+log4j.logger.stdout = stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.Threshold = debug
+log4j.appender.stdout.Threshold = warn
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH\:mm\:ss}] %C.%M(%L) | %m%n  
 
